kubernetes/apps/navidrome/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: navidrome
spec:
  selector:
    matchLabels:
      app: navidrome
  template:
    metadata:
      labels:
        app: navidrome
    spec:
      containers:
      - name: navidrome
        image: deluan/navidrome:latest
        ports:
        - containerPort: 4533
        volumeMounts:
        - name: db-storage
          mountPath: /data
        - name: music-storage
          mountPath: /music
volumes:
      - name: db-storage
        persistentVolumeClaim:
          claimName: navidrome-db
      - name: music-storage
        hostPath:
          path: /mnt/lab-backups/music-library
          type: DirectoryOrCreate
