kubernetes/apps/navidrome/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: navidrome
spec:
  type: NodePort
  selector:
    app: navidrome
  ports:
  - port: 4533
    targetPort: 4533
    nodePort: 30533 # Access via http://monolith-ip:30533
